--- a/pure-io.cabal
+++ b/pure-io.cabal
@@ -17,6 +17,11 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , MissingH
+                     , vector
+                     , bytestring
+                     , utf8-string
+                     , base64-bytestring
   default-language:    Haskell2010
 
 executable pure-io-exe
@@ -25,6 +30,11 @@ executable pure-io-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , pure-io
+                     , MissingH
+                     , vector
+                     , bytestring
+                     , utf8-string
+                     , base64-bytestring
   default-language:    Haskell2010
 
 test-suite pure-io-test
