--- a/pure-io.cabal
+++ b/pure-io.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Main_
   build-depends:       base >= 4.7 && < 5
                      , MissingH
                      , vector
@@ -35,15 +35,6 @@ executable pure-io-exe
                      , bytestring
                      , utf8-string
                      , base64-bytestring
-  default-language:    Haskell2010
-
-test-suite pure-io-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , pure-io
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
